# pal_watson

./: README.md
pal_watson_visual_recognition/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
pal_watson_visual_recognition/scripts/: watson_recognizer_server.py
pal_watson_visual_recognition/src/pal_watson_visual_recognition/: visual_recognition.py
pal_watson_visual_recognition/test/: test_watson_vr_api.py  watson_vr_api.test
